# misis2023f-23-32-sergeev-d-n

./: .gitignore  CMakeLists.txt  codeforces.id  status.md
prj.codeforces/: 0004a.cpp  0136b.cpp  0263a.cpp  0271a.cpp  0276a.cpp  0339b.cpp  0617a.cpp  0731a.cpp  0765g.cpp  0978a.cpp  0978b.cpp  1330a.cpp  1352a.cpp  136b.cpp  1512b.cpp  1559a.cpp  1649a.cpp  1669d.cpp  1670b.cpp  1690d.cpp  1717b.cpp  1721b.cpp  1734b.cpp  1744c.cpp  1872a.cpp  1873c.cpp  1873d.cpp  339b.cpp  CMakeLists.txt
prj.lab/: CMakeLists.txt  complex.cpp  complex.hpp  struct_complex.cpp
prj.lab/dynarr/: CMakeLists.txt  dynarr.cpp  dynarr.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.test/: CMakeLists.txt  test_complex.cpp  test_dynarr.cpp  test_rational.cpp
